# Lexa152-reposik

./: .coverage  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: index.html
src/: generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
